crates/monochange/tests/snapshots/cli_output__release_dry_run_cli_patches_parent_packages_when_dependencies_change@release_dry_run_cli_patches_parent_packages_when_dependencies_change.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - run
    - release
    - "--dry-run"
    - "--format"
    - text
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
• Release preview · 2 packages · dry-run, no files were changed

Releases
  app   app/v1.0.1   package
  core  core/v1.1.0  package

Packages (2)
  workflow-app, workflow-core

Changed files (2)
  crates/app/Cargo.toml
  crates/core/Cargo.toml

Manifest  .monochange/local/release-manifest.json

Log
  skipped release record: dry-run preview (pass `--release-json` to write release.json)

----- stderr -----
