crates/monochange/tests/snapshots/cli_output__release_dry_run_cli_text_renders_diff_preview@release_dry_run_cli_text_renders_diff_preview.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - run
    - release
    - "--dry-run"
    - "--diff"
    - "--format"
    - text
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
• Release preview · 2 packages · dry-run, no files were changed

Releases
  sdk  v1.1.0  group · tag · release

Packages (2)
  workflow-app, workflow-core

Changed files (6)
  Cargo.toml
  changelog.md
  crates/app/Cargo.toml
  crates/core/CHANGELOG.md
  crates/core/Cargo.toml
  group.toml

File diffs (4)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace]
 members = ["crates/*"]
 resolver = "2"
 
 [workspace.package]
-version = "1.0.0"
+version = "1.1.0"
 
 [workspace.dependencies]
-workflow-core = { path = "./crates/core", version = "1.0.0" }
-workflow-app = { path = "./crates/app", version = "1.0.0" }
+workflow-core = { path = "./crates/core", version = "1.1.0" }
+workflow-app = { path = "./crates/app", version = "1.1.0" }

--- a/changelog.md
+++ b/changelog.md
@@ -1 +1,10 @@
 # Changelog
+
+## 1.1.0 ([DATE])
+
+Grouped release for `sdk`.
+
+### Features
+
+- **add feature.**
+  _Packages:_ 🟠 _core_

--- a/crates/core/CHANGELOG.md
+++ b/crates/core/CHANGELOG.md
@@ -1 +1,7 @@
 # Changelog
+
+## 1.1.0 ([DATE])
+
+### Features
+
+- **add feature.**

--- a/group.toml
+++ b/group.toml
@@ -1,6 +1,6 @@
 [workspace.package]
-version = "1.0.0"
+version = "1.1.0"
 
 [workspace.dependencies]
-workflow-core = { version = "1.0.0" }
-workflow-app = { version = "1.0.0" }
+workflow-core = { version = "1.1.0" }
+workflow-app = { version = "1.1.0" }

Manifest  .monochange/local/release-manifest.json

Log
  skipped release record: dry-run preview (pass `--release-json` to write release.json)

----- stderr -----
