crates/monochange/tests/snapshots/cli_output__release_pr_workflow_reports_dry_run_pull_request_preview@release_pr_workflow_reports_dry_run_pull_request_preview.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - run
    - release-pr
    - "--dry-run"
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
• Release preview · 2 packages · dry-run, no files were changed

Releases
  sdk  v1.1.0  group · tag · release

Packages (2)
  workflow-app, workflow-core

Release request
  dry-run ifiokjr/monochange monochange/release/release-pr -> main via github

Changed files (6)
  Cargo.toml
  changelog.md
  crates/app/Cargo.toml
  crates/core/CHANGELOG.md
  crates/core/Cargo.toml
  group.toml

Manifest  .monochange/local/release-manifest.json

Log
  skipped release record: dry-run preview (pass `--release-json` to write release.json)

----- stderr -----
