crates/monochange/tests/snapshots/cli_output__validate_cli_succeeds_for_valid_workspace@validate_cli_succeeds_for_valid_workspace.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: monochange
  args:
    - step
    - validate
  env:
    MONOCHANGE_NO_PROGRESS: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✔ Workspace validation passed

----- stderr -----
